# tem_analysis

./: .gitignore  README.md  TEM_SW_DOC.txt
centroid/: CMakeLists.txt
centroid/deploy_dependencies/windows/jre7/: release
centroid/modules/: CMakeLists.txt
centroid/modules/filter_applyRegistration/: CMakeLists.txt  filter_applyRegistration.cpp  filter_applyRegistration.h  filter_applyRegistration.json  plugins.pro
centroid/modules/filter_atomCorrelation/: CMakeLists.txt  filter_atomCorrelation.cpp  filter_atomCorrelation.h  filter_atomCorrelation.json
centroid/modules/filter_atomPositions/: CMakeLists.txt  filter_atomPositions.cpp  filter_atomPositions.h  filter_atomPositions.json  plugins.pro
centroid/modules/filter_base/: CMakeLists.txt  filter_implementation.cpp  filter_implementation.h  filter_support.cpp  filter_support.h
centroid/modules/filter_median/: CMakeLists.txt  filter_median.cpp  filter_median.json  plugins.pro
centroid/modules/filter_registerImages/: CMakeLists.txt  filter_registerImages.cpp  filter_registerImages.h  filter_registerImages.json  plugins.pro
centroid/modules/filter_subset/: CMakeLists.txt  filter_subset.cpp  filter_subset.h  filter_subset.json  plugins.pro
centroid/modules/modules_util/: CMakeLists.txt  implementation.h  modules_util.cpp  modules_util.h
centroid/src/: CMakeLists.txt
centroid/src/centroid/: CMakeLists.txt  block.cpp  block.h  filter_interface.h  interface.cpp  interface.h  log.h  main.cpp  main.h  main_viewer.cpp  main_viewer.h  main_window.cpp  main_window.h  main_window.qrc  metadata.cpp  metadata.h  module_button.h  modules_manager.cpp  modules_manager.h  new_project.cpp  new_project.h  particle_item.cpp  particle_item.h  particles.cpp  particles.h  project.cpp  project.h  version.h  viewer_graphics_scene.cpp  viewer_graphics_scene.h
centroid/src/centroid/forms/: main_viewer.ui  main_window.ui  new_project.ui
data/Case_02/: case2.proj
data/Case_02/atomCorrelation/: 000000.XXX.atomCorr.tif  000001.XXX.atomCorr.tif  000002.XXX.atomCorr.tif  000003.XXX.atomCorr.tif  000004.XXX.atomCorr.tif  000005.XXX.atomCorr.tif  000006.XXX.atomCorr.tif  000007.XXX.atomCorr.tif  000008.XXX.atomCorr.tif  000009.XXX.atomCorr.tif  000010.XXX.atomCorr.tif  000011.XXX.atomCorr.tif  000012.XXX.atomCorr.tif  000013.XXX.atomCorr.tif  000014.XXX.atomCorr.tif  000015.XXX.atomCorr.tif  000016.XXX.atomCorr.tif  000017.XXX.atomCorr.tif  000018.XXX.atomCorr.tif  000019.XXX.atomCorr.tif
data/Case_02/atomCorrelationRegistered/: 000000.XXX.atomCorr.registered.tif  000001.XXX.atomCorr.registered.tif  000002.XXX.atomCorr.registered.tif  000003.XXX.atomCorr.registered.tif  000004.XXX.atomCorr.registered.tif  000005.XXX.atomCorr.registered.tif  000006.XXX.atomCorr.registered.tif  000007.XXX.atomCorr.registered.tif  000008.XXX.atomCorr.registered.tif  000009.XXX.atomCorr.registered.tif  000010.XXX.atomCorr.registered.tif  000011.XXX.atomCorr.registered.tif  000012.XXX.atomCorr.registered.tif  000013.XXX.atomCorr.registered.tif  000014.XXX.atomCorr.registered.tif  000015.XXX.atomCorr.registered.tif  000016.XXX.atomCorr.registered.tif  (+3 more)
old/centroid-qt-dialog/: centroid-qt.cpp  centroid-qt.pro  particles_form.ui
old/ui/: block.h  centroid.pro  interface.h  main.cpp  main_viewer.cpp  main_viewer.h  main_viewer.ui  main_window.h  main_window.qrc  module_button.cpp  particles.cpp  viewer_graphics_scene.cpp  viewer_graphics_scene.h
old/ui/plugins_cmake/modules/filter_registerImages/: CMakeLists.txt  filter_registerImages.cpp  filter_registerImages.h  filter_registerImages.json
sdk/: .gitignore  VTK-6.1.0-CMakeLists-windows.txt  compile  compile.bat
sdk/ImageJ/: jghReg.ijm  runReg.sh  tmp.out  try.ijm
(+136 files in other folders)
